Rename ls_id to ext_id
